--- a/www/views/entity/Sample/mutation_signatures.haml
+++ b/www/views/entity/Sample/mutation_signatures.haml
@@ -9,7 +9,7 @@
     `deconstructSigs` package in R.
 
     `Alexandrov LB, Nik-Zainal S, Wedge DC, et al.: Signatures of mutational
-    processes in human cancer. Nature. 2013; 500(7463): 415–21`
+    processes in human cancer. Nature. 2013; 500(7463): 415:21`
 
 = action_card_render action_card do
   = table :page => "1~-#{donor}" do
